added image and edited css and html

--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,17 @@ body {
   color: blue;
 
 }
+
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.cats {
+  height: 100%;
+  width: 100%;
+  background: url("../img/cat_bg_home.jpg");
+}
