--- a/css/main.css
+++ b/css/main.css
@@ -10,23 +10,42 @@ body {
 h1 {
   font-size: 36px;
   font-weight: bold;
+  line-height: 40px;
   padding-bottom: 10px;
 }
 
 h2 {
   font-size: 32px;
+  line-height: 36px;
   padding-bottom: 10px;
 }
 
 h3 {
   font-size: 28px;
+  line-height: 32px;
   padding-bottom: 10px;
 }
 
 h4 {
   font-size: 24px;
+  line-height: 28px;
   padding-bottom: 10px;
 }
+
+p {
+  font-size: 16px;
+  line-height: 20px;
+  margin: 10px 0px;
+}
+
+ul {
+  text-decoration-style: solid;
+  list-style-type: circle;
+  line-height: 24px;
+  padding-bottom: 10px;
+  padding-left: 24px;
+}
+
 
 #stc {
   text-align: center;
@@ -46,4 +65,7 @@ h4 {
   height: 100%;
   width: 100%;
   background: url("../img/cat_bg_home.jpg");
+  background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center bottom;
 }
