--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,9 @@ body {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 46px;
   font-weight: bold;
-  line-height: 40px;
+  line-height: 50px;
   padding-bottom: 10px;
 }
 
@@ -43,14 +43,24 @@ ul {
   list-style-type: circle;
   line-height: 24px;
   padding-bottom: 10px;
-  padding-left: 24px;
+  padding-left: 40px;
 }
 
+.row {
+  clear: both;
+  overflow: auto;
+}
+
+.column {
+  text-align: center;
+  padding: 10px;
+  width: 50%;
+  float: left;
+}
 
 #stc {
   text-align: center;
   color: blue;
-
 }
 
 .container {
