--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,17 @@
 
 body {
   font: normal 16px Helvetica, Arial, sans-serif;
-  margin: 20px;
+  padding: 20px;
+}
+
+ul.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li.nav {
+  display: inline;
 }
 
 h1 {
@@ -38,7 +48,7 @@ p {
   margin: 10px 0px;
 }
 
-ul {
+ul.facts {
   text-decoration-style: solid;
   list-style-type: circle;
   line-height: 24px;
